--- a/css/post.css
+++ b/css/post.css
@@ -9,5 +9,30 @@
 }
 
 #all{
+    width: 100%;
+    height: 100%;
     display: grid;
+    grid-template-columns: 500px;
+    grid-template-rows: 100px 200px 500px 50px;
+    grid-template-areas: 
+    "hd"
+    "sb"
+    "co"
+    "ft";
+}
+
+#head{
+    grid-area: hd;
+}
+
+#content{
+    grid-area:co;
+}
+
+#sidebar{
+    grid-area: sb;
+}
+
+#footer{
+    grid-area: ft;
 }
