--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
     grid-area: pc;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 #footer{
@@ -48,4 +49,10 @@
 .image{
     width: 400px;
     object-fit: scale-down;
+}
+
+#post_link{
+    font-weight: bold;
+    width: 100px;
+    margin: auto;
 }
