add social/footer in bottom of page

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@
 
 #footer{
     grid-area: ft;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 #card_figure{
