set header style and content + add bio and content headings

--- a/css/post.css
+++ b/css/post.css
@@ -23,6 +23,11 @@
 
 #head{
     grid-area: hd;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 #author_info{
