--- a/css/post.css
+++ b/css/post.css
@@ -13,7 +13,7 @@
     height: 100%;
     display: grid;
     grid-template-columns: 500px;
-    grid-template-rows: 100px 200px 400px 40px;
+    grid-template-rows: 150px 200px 400px 40px;
     grid-template-areas: 
     "hd"
     "ai"
@@ -38,6 +38,10 @@
     grid-area:co;
 }
 
-#social{
+#social_links{
     grid-area: so;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
