--- a/css/post.css
+++ b/css/post.css
@@ -32,6 +32,10 @@
 
 #author_info{
     grid-area: ai;
+    display: grid;
+    grid-template-columns: 100px 1fr;
+    grid-template-rows: 50px 100px 1fr;
+    grid-gap: 20px;
 }
 
 #content{
@@ -44,4 +48,22 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+}
+
+#avatar{
+    width: 100px;
+    padding: 10px;
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#biohead{
+    padding: 10px;;
+    grid-column: 1;
+    grid-row: 1;
+}
+
+#biolist{
+    grid-column: 2;
+    grid-row: 2;
 }
