--- a/css/post.css
+++ b/css/post.css
@@ -1,24 +1,21 @@
-.box{
-    background-color: aquamarine;
-    border: solid orange;
-}
-
 .container{
     background-color: blue;
     border: solid red;
-}
-
-#all{
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 500px;
+    grid-template-columns: 95vw;
     grid-template-rows: 150px 200px 400px 40px;
     grid-template-areas: 
     "hd"
     "ai"
     "co"
     "so";
+}
+
+.box{
+    background-color: aquamarine;
+    border: solid orange;
 }
 
 #head{
@@ -86,4 +83,21 @@
     background-color: black;
     background-image: url(https://mbmav.github.io/Project-Personal-Blog-Website/img/mountain2.jpg);
     background-size: cover;
+}
+
+@media (min-width: 501px) and (max-width: 900px) {
+    .container {
+        background-color: blue;
+        border: solid red;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 90vw;
+        grid-template-rows: 150px 200px 400px 40px;
+        grid-template-areas: 
+        "hd"
+        "ai"
+        "co"
+        "so";
+    }
 }
