--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: 500px;
+    grid-template-columns: 95vw;
     grid-template-rows: 150px 400px 40px;
     grid-template-areas: 
     "nv"
@@ -64,4 +64,20 @@
     font-weight: bold;
     width: 100px;
     margin: auto;
+}
+
+@media (min-width: 501px) and (max-width: 900px) {
+    .container {
+        background-color: blue;
+        border: solid red;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 90vw;
+        grid-template-rows: 150px 400px 40px;
+        grid-template-areas: 
+        "nv"
+        "pc"
+        "ft";
+    }
 }
