--- a/css/post.css
+++ b/css/post.css
@@ -83,6 +83,7 @@
     background-color: black;
     background-image: url(https://mbmav.github.io/Project-Personal-Blog-Website/img/mountain2.jpg);
     background-size: cover;
+    background-position: left bottom;
 }
 
 @media (min-width: 501px) and (max-width: 900px) {
@@ -93,7 +94,7 @@
         height: 100%;
         display: grid;
         grid-template-columns: 90vw;
-        grid-template-rows: 150px 200px 400px 40px;
+        grid-template-rows: 150px 200px 500px 40px;
         grid-template-areas: 
         "hd"
         "ai"
