--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@
 }
 
 .image{
-    width: 400px;
+    width: 300px;
     object-fit: scale-down;
 }
 
@@ -74,10 +74,15 @@
         height: 100%;
         display: grid;
         grid-template-columns: 90vw;
-        grid-template-rows: 150px 400px 40px;
+        grid-template-rows: 150px 500px 40px;
         grid-template-areas: 
         "nv"
         "pc"
         "ft";
+    }
+
+    .image{
+        width: 70vw;
+        object-fit: scale-down;
     }
 }
