--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,20 @@
     margin: auto;
 }
 
+.mainHeading{
+    font-family: sans-serif;
+    font-style: oblique;
+    font-weight: bold;
+    font-size: 150%;
+}
+
+.link{
+    font-family: monospace;
+    font-style: normal;
+    font-size: smaller;
+    font-weight: bold;
+}
+
 @media (min-width: 501px) and (max-width: 900px) {
     .container {
         background-color: blue;
