--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+body{
+    background-color: black;
+}
+
 .container{
-    background-color: blue;
+    background-color: black;
     border: solid red;
     width: 100%;
     height: 100%;
@@ -13,7 +17,7 @@
 }
 
 .box{
-    background-color: aquamarine;
+    background-color: black;
     border: solid orange;
 }
 
