--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,11 @@ body{
 
 .container{
     background-color: black;
-    border: solid red;
     width: 100%;
     height: 100%;
+    padding: 20px;
     display: grid;
-    grid-template-columns: 95vw;
+    grid-template-columns: 90vw;
     grid-template-rows: 150px 400px 40px;
     grid-template-areas: 
     "nv"
@@ -18,7 +18,7 @@ body{
 
 .box{
     background-color: black;
-    border: solid orange;
+    border: solid darkgray;
 }
 
 #navi{
@@ -71,6 +71,7 @@ body{
 }
 
 .mainHeading{
+    color: white;
     font-family: sans-serif;
     font-style: oblique;
     font-weight: bold;
@@ -86,8 +87,7 @@ body{
 
 @media (min-width: 501px) and (max-width: 900px) {
     .container {
-        background-color: blue;
-        border: solid red;
+        background-color: black;
         width: 100%;
         height: 100%;
         display: grid;
@@ -102,5 +102,38 @@ body{
     .image{
         width: 70vw;
         object-fit: scale-down;
+    }
+}
+
+
+@media (min-width: 901px) {
+    .container {
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 90vw;
+        grid-template-rows: 150px 1fr 40px;
+        grid-template-areas: 
+        "nv"
+        "pc"
+        "ft";
+    }
+
+    .image{
+        width: 70vw;
+        object-fit: scale-down;
+    }
+
+    #postCard{
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
+
+    #postLink{
+        font-weight: bold;
+        width: 100px;
+        margin-top: 50px;
     }
 }
