--- a/css/post.css
+++ b/css/post.css
@@ -1,3 +1,7 @@
+@import url("https://mbmav.github.io/Project-Personal-Blog-Website/css/post_medium.css");
+
+@import url("https://mbmav.github.io/Project-Personal-Blog-Website/css/post_big.css");
+
 body{
     background-color: black;
 }
@@ -127,62 +131,4 @@ body{
     font-style: normal;
     font-size: smaller;
     font-weight: bold;
-}
-
-@media (min-width: 501px) and (max-width: 900px) {
-    .container {
-        background-color: black;
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 90vw;
-        grid-template-rows: 150px 200px 500px 40px;
-        grid-template-areas: 
-        "hd"
-        "ai"
-        "co"
-        "so";
-    }
-}
-
-
-@media (min-width: 901px) {
-    .container {
-        background-color: black;
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 20vw 75vw;
-        grid-template-rows: 150px 500px 40px;
-        grid-template-areas: 
-        "hd hd"
-        "ai co"
-        "so so";
-    }
-
-    #authorInfo{
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 50px 100px 1fr;
-        grid-gap: 20px;
-    }
-
-    #avatar{
-        width: 100px;
-        padding: 10px;
-        grid-column: 1;
-        grid-row: 2;
-    }
-    
-    #bioHead{
-        padding: 10px;
-        padding-left: 40px;
-        grid-column: 1;
-        grid-row: 1;
-    }
-    
-    #bioList{
-        grid-column: 1;
-        grid-row: 3;
-    }
 }
