--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+@import "style_medium.css";
+
+@import "style_big.css";
+
+@import "link_style.css";
+
 body{
     background-color: black;
 }
@@ -76,64 +82,4 @@ body{
     font-style: oblique;
     font-weight: bold;
     font-size: 150%;
-}
-
-.link{
-    font-family: monospace;
-    font-style: normal;
-    font-size: smaller;
-    font-weight: bold;
-}
-
-@media (min-width: 501px) and (max-width: 900px) {
-    .container {
-        background-color: black;
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 90vw;
-        grid-template-rows: 150px 500px 40px;
-        grid-template-areas: 
-        "nv"
-        "pc"
-        "ft";
-    }
-
-    .image{
-        width: 70vw;
-        object-fit: scale-down;
-    }
-}
-
-
-@media (min-width: 901px) {
-    .container {
-        background-color: black;
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 90vw;
-        grid-template-rows: 150px 1fr 40px;
-        grid-template-areas: 
-        "nv"
-        "pc"
-        "ft";
-    }
-
-    .image{
-        width: 70vw;
-        object-fit: scale-down;
-    }
-
-    #postCard{
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-    }
-
-    #postLink{
-        font-weight: bold;
-        width: 100px;
-        margin-top: 50px;
-    }
 }
