fix @import linking in style.css and post.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-@import url("https://mbmav.github.io/Project-Personal-Blog-Website/css/style_medium.css");
-@import url("https://mbmav.github.io/Project-Personal-Blog-Website/css/style_big.css");
-@import url("https://mbmav.github.io/Project-Personal-Blog-Website/css/link_style.css");
+@import url(style_medium.css);
+@import url(style_big.css);
+@import url(link_style.css);
 
 body{
     background-color: black;
