regroup page because of @import problem

--- a/css/post.css
+++ b/css/post.css
@@ -1,24 +1,8 @@
-@import url(post_medium.css);
-@import url(post_big.css);
 @import url(link_style.css);
+@import url(heading_styles.css);
 
 body{
     background-color: black;
-}
-
-.container{
-    background-color: black;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 90vw;
-    grid-template-rows: 150px 280px 500px 40px;
-    grid-template-areas: 
-    "hd"
-    "ai"
-    "co"
-    "so";
 }
 
 .box{
@@ -95,14 +79,6 @@ body{
     background-position: left bottom;
 }
 
-.mainHeading{
-    color: cornsilk;
-    font-family: sans-serif;
-    font-style: oblique;
-    font-weight: bold;
-    font-size: 150%;
-}
-
 .item{
     color: cornsilk;
     font-family: serif;
@@ -111,17 +87,83 @@ body{
     font-weight: bold;
 }
 
-.postheading{
-    color: white;
-    font-family: sans-serif;
-    font-style: italic;
-    font-weight: bold;
-    font-size: 150%;
-}
-
 .text{
     color: white;
     font-family: sans-serif;
     font-style: normal;
     font-weight: normal;
+}
+
+@media (max-width: 515px) {
+    .container{
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        display: grid;
+        grid-template-columns: 90vw;
+        grid-template-rows: 150px 280px 500px 40px;
+        grid-template-areas: 
+        "hd"
+        "ai"
+        "co"
+        "so";
+    }
+}
+
+@media (min-width: 516px) and (max-width: 900px) {
+    .container {
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 90vw;
+        grid-template-rows: 150px 200px 500px 40px;
+        grid-template-areas: 
+        "hd"
+        "ai"
+        "co"
+        "so";
+    }
+}
+
+@media (min-width: 901px) {
+    .container {
+        background-color: black;
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-columns: 20vw 75vw;
+        grid-template-rows: 150px 500px 40px;
+        grid-template-areas: 
+        "hd hd"
+        "ai co"
+        "so so";
+    }
+
+    #authorInfo{
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 50px 100px 1fr;
+        grid-gap: 20px;
+    }
+
+    #avatar{
+        width: 100px;
+        padding: 10px;
+        grid-column: 1;
+        grid-row: 2;
+    }
+    
+    #bioHead{
+        padding: 10px;
+        padding-left: 40px;
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    #bioList{
+        grid-column: 1;
+        grid-row: 3;
+    }
 }
